AG-209: rich select content no longer wraps

--- a/src/styles/ag-grid.styl
+++ b/src/styles/ag-grid.styl
@@ -568,6 +568,9 @@ ag-grid-ng2
 .ag-rich-select
     outline none
 
+.ag-rich-select-row
+    white-space nowrap
+
 .ag-rich-select-list
     width 200px
     height 200px
